--- a/src/view/pages/home/styles/card.css
+++ b/src/view/pages/home/styles/card.css
@@ -1,15 +1,15 @@
 .wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  padding: 20px;
+  gap: 1.25rem;
+  padding: 1.25rem;
 }
 
 .card {
   background-color: #f8f9fa;
-  border-radius: 8px;
-  padding: 20px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+  padding: 1.25rem;
+  box-shadow: 0 0.25rem 0.3rem rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
   cursor: pointer;
   text-align: center;
@@ -19,10 +19,10 @@
   padding: 1rem 2rem;
   flex-shrink: 0;
   background-color: #ffffff;
-  border-radius: 16px;
+  border-radius: 1rem;
   text-align: center;
-  box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.1),
-  -10px -10px 10px white;
+  box-shadow: 0.8rem 0.8rem 0.8rem rgba(0, 0, 0, 0.1),
+  -0.6rem -0.6rem 0.6rem white;
 }
 
 .card:hover {
